--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <section>
-        <div class="">
+        <div class="histo">
             <h1>La petite histoire</h1>
         </div>
         <div  class="container">
@@ -33,8 +33,11 @@
                 <div class="text">L’ouverture de la Fabrique</div>
                 <div class="year">2017</div>
             </div>>
-            <div class="right">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo ut voluptas ducimus sint, commodi blanditiis itaque temporibus eius dolorem deserunt, minus necessitatibus eaque nihil corrupti, officiis exercitationem? Blanditiis, perspiciatis saepe.</p>
+            <div class="quote-container">
+                <div class="background"></div>
+                <div class="quote">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores laboriosam deleniti, culpa perspiciatis nemo quos illum? Inventore non totam ea, optio voluptates eveniet in sequi quasi dolorem molestiae saepe eaque, enim laudantium corrupti iure quisquam a amet reprehenderit atque fugiat?</p>
+                </div>
             </div>
         </div>
 
@@ -47,10 +50,10 @@
             <H1>Notre pédagogie</H1>
         </div>
         <div class="notre">
-            <div class="left">
+            <div class="gauche">
                <iframe width="560" height="315" src="https://www.youtube.com/embed/0PeqnLq12V8?si=hD4N01dYGEX6X7ou" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-            <div class="right">
+            <div class="bg">
                 <h1>Le pédagogie active</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Commodi voluptas nostrum, illo vitae eligendi <br> possimus quisquam soluta  temporibus vero amet, <br> accusamus voluptates omnis illum doloribus <br> cum ea veritatis ratione similique.</p>
             </div>
@@ -112,50 +115,48 @@
 
     <!-- Nos valeurs -->
 
-    <section>
-        <div>
+    <sectionc id="second">
+        <div class="sous">
             <h1>Nos valeurs</h1>
         </div>
         <div  class="valeur">
-            <div class="left">
+            <div class="nos-valeur">
                 <h1>Respect</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, similique? Quas pariatur quo aliquid ullam illum, dolores dolorem voluptates necessitatibus sapiente, quod cupiditate alias culpa recusandae, expedita aut similique ex?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing 
+                    elit. <br> Ex, similique? Quas pariatur quo aliquid ullam <br> illum, dolores dolorem voluptates <br>  necessitatibus sapiente, quod cupiditate <br> alias culpa recusandae, expedita aut similique ex?</p>
                 <button>voir plus</button>
             </div>
-            <div class="right">
-                    <div class="respect">
-                        <h1>01</h1>
-                    </div>
-                    <div>
-                        <h2>Respect</h2>
+            <div class="sidebar">
+                <div class="sidebar-item selected">
+                    <div class="circle">01</div>
+                    <div class="text">
+                        <h3>Respect</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur</p>
                     </div>
-                    <div class="respect">
-                        <h1>02</h1>
-                    </div>
-                    <div>
-                        <h2>Respect</h2>
+                </div>
+                <div class="sidebar-item">
+                    <div class="circle">02</div>
+                    <div class="text">
+                        <h3>Respect</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur</p>
                     </div>
-                    <div class="respect">
-                        <h1>03</h1>
-                    </div>
-                    <div>
-                        <h2>Respect</h2>
+                </div>
+                <div class="sidebar-item">
+                    <div class="circle">03</div>
+                    <div class="text">
+                        <h3>Respect</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur</p>
                     </div>
-                    <div class="respect">
-                        <h1>04</h1>
-                    </div>
-                    <div>
-                        <h2>Respect</h2>
+                </div>
+                <div class="sidebar-item">
+                    <div class="circle">04</div>
+                    <div class="text">
+                        <h3>Respect</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur</p>
                     </div>
-
                 </div>
             </div>
         </div>
-
     </section>
 
     <!-- Nos chiffres -->
@@ -213,8 +214,65 @@
 
 <!-- Recrutement -->
 
-<section>
-
+<section class="recrutement-section">
+    <div class="header">
+        <h1>Recrutement</h1>
+    </div>
+    <div class="content">
+        <div class="left-column">
+            <img src="imgsimplon.png" alt="Team Image" class="Simplon">
+            <div class="offers">
+                <h2>Offres en cours</h2>
+                <div class="offer">
+                    <h3>Formateur référent</h3>
+                    <p><strong>Résumé du poste</strong></p>
+                    <p>Unde temporibus amet est! Perferendis sapienteanimi...</p>
+                    <div class="details">
+                        <span>CDD</span>
+                        <span>Plein temps</span>
+                        <span>Dakar</span>
+                        <span>XX/XY/ZZ</span>
+                    </div>
+                    <button class="postuler">Postuler</button>
+                </div>
+                <div class="offer">
+                    <h3>Formateur référent</h3>
+                    <button class="more">+</button>
+                </div>
+                <div class="offer">
+                    <h3>Formateur référent</h3>
+                    <button class="more">+</button>
+                </div>
+                <button class="afficher-plus">Afficher plus</button>
+            </div>
+        </div>
+        <div class="right-column">
+            <h2>Pourquoi nous rejoindre ?</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores laboriosam deleniti, culpa perspiciatis nemo quos illum? Inventore non totam ea, optio voluptates eveniet in sequi quasi dolorem molestiae saepe eaque, enim laudantium corrupti iure quisquam a amet reprehenderit atque fugiat?</p>
+            <form class="application-form">
+                <div class="form-group">
+                    <input type="text" placeholder="Prénom *" required>
+                    <input type="text" placeholder="Nom *" required>
+                </div>
+                <div class="form-group">
+                    <input type="tel" placeholder="Tel *" required>
+                    <input type="email" placeholder="Mail *" required>
+                </div>
+                <div class="form-group">
+                    <textarea placeholder="Message *" required></textarea>
+                </div>
+                <div class="form-group">
+                    <input type="file" id="file-upload" style="display:none;">
+                    <label for="file-upload" class="file-upload-label">Joindre un fichier</label>
+                </div>
+                <div class="form-group">
+                    <input type="checkbox" required>
+                    <label>I agree to terms and policy</label>
+                </div>
+                <button type="submit" class="rejoindre">Rejoindre</button>
+            </form>
+        </div>
+    </div>
 </section>
 
 <!-- Nos partenaire -->
